k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qualificar-partes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qualificar-partes
  template:
    metadata:
      labels:
        app: qualificar-partes
    spec:
      containers:
        - name: api
          image: qualificar-partes:latest
          ports:
            - containerPort: 8080
