k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qualificar-partes
spec:
  selector:
    app: qualificar-partes
  ports:
    - name: http  
      port: 8080
      targetPort: 8080
