k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: qualificar-partes
spec:
  to:
    kind: Service
    name: dev-qualificar-partes
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
